--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,27 @@
+/* Common Rules */
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+/* /Common Rules */
+
+
+/* Utility */
+
+/* /Utility */
+
+
+/**************
+ Header 
+ **************/
+
+
+ /**************
+ Main
+ **************/
+
+
+ /**************
+ Footer 
+ **************/
