Complete nav menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,140 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    font-family: Roboto;
+    color: white;
+    font-weight: 300;
+}
 /* /Common Rules */
 
 
 /* Utility */
+.clearfix{
+    display: table;
+    content: "";
+    clear: both;
+}
 
+.container{
+    width: 85%;
+    margin: auto;
+}
+
+.bg_blue{
+    background-color: #0C325A;
+}
+
+.bg_green{
+    background-color: #7CBB02;
+}
+
+.bg_grey{
+    background-color: #D3D3D3;
+}
+
+.btn{
+    border-radius: 5px;
+    padding: 8px 16px;
+}
+
+.btn_outline{
+    border: 1px solid white;
+}
+
+.btn_solid{
+    background-color: #7CBB02;
+}
 /* /Utility */
 
 
 /**************
  Header 
  **************/
+#site_header{
+    height: 550px;
+    background-image: url("../img/background-header.png");
+    background-size: 1000px;
+    background-repeat: no-repeat;
+    background-position: 115% 110%;
+}
 
+#site_header nav{
+    line-height: 60px;
+}
+
+#site_header a{
+    color: white;
+    text-decoration: none;
+    font-size: 10px;
+    font-weight: 400;
+}
+
+.logo{
+    width: 15%;
+    margin-top: 15px;
+}
+
+.logo, .left_menu, .right_menu{
+    float: left;
+    text-transform: uppercase;
+}
+
+/* Left Menu */
+.left_menu{
+    width: 45%;
+}
+
+.left_menu > ul > li{
+    list-style: none;
+    padding: 10px;
+    display: inline-block;
+}
+/* /Left Menu */
+
+
+/* Right Menu */
+.right_menu{
+    width: 40%;
+    text-align: right;
+}
+
+.right_menu > ul > li{
+    list-style: none;
+    padding: 10px;
+    display: inline-block;
+}
+
+.btn_outline:hover{
+    background-color: #7CBB02;
+}
+
+.btn_solid:hover{
+    background-color: #456602;
+    
+}
+
+li > a:hover:not(.btn){
+    border-bottom: 2px solid #7CBB02;
+    border-left: 2px solid #7CBB02;
+    padding: 0 0 5px 5px;
+}
+/* /Right Menu */
+
+.header_text{
+    margin-top: 10%;
+    width: 45%;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+section > div > a{
+    border-radius: 5px;
+    padding: 15px 16px;
+    text-transform: uppercase;
+    font-size: 15px;
+}
 
  /**************
  Main
