--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ body{
     line-height: 60px;
 }
 
-#site_header a{
+#site_header li > a{
     color: white;
     text-decoration: none;
     font-size: 10px;
@@ -130,13 +130,21 @@ li > a:hover:not(.btn){
     width: 45%;
     font-size: 30px;
     margin-bottom: 30px;
+    height: auto;
 }
 
 section > div > a{
     border-radius: 5px;
     padding: 15px 16px;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 13px;
+    color: white;
+    text-decoration: none;
+    font-weight: 400;
+}
+
+.header_text :first-child{
+    margin-bottom: 30px;
 }
 
  /**************
